🐛 Fix half pixel overflow

--- a/res/css/nav.css
+++ b/res/css/nav.css
@@ -13,6 +13,7 @@
     grid-area: logo;
     display: grid;
     place-content: center;
+    height: fit-content;
 }
 
 .logo a {
